feat: branch and employee update services
